--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,11 +15,16 @@ h1, h2,h3{
 
 .area-login{
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     justify-content: center;
     align-items: center;
 }
 .login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #1c1c1c;
     width: 355px;
     height: 320px;
