--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@ h1, h2,h3{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #1c1c1c;
+    background-color: #e0c590;
     width: 355px;
     height: 320px;
     padding: 35px;
