--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,10 +32,12 @@ h1, h2,h3{
 }
 .login form{
     display: flex;
+    width: 100%;
     flex-direction: column;
 }
 .login input{
     margin-top: 10px;
+    backgroud-color: #252A34;
 }
 
 
