--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,7 @@ h1, h2,h3{
     flex-direction: column;
     align-items: center;
     background-color: #e0c590;
+    border-radius: 10px;
     width: 355px;
     height: 320px;
     padding: 35px;
@@ -38,8 +39,19 @@ h1, h2,h3{
 .login input{
     margin-top: 10px;
     backgroud-color: #252A34;
-}
+    padding-left: 10px;
+    color: #CBD0F7;
+    border: none;
+    height: 45px;
+    outline: none;
+    border-radius: 8px;
 
+}
+.input: :placeholder{
+    color: #CBD0F7; 
+    font-size: 14px;
+    
+}
 
 /* Nav */
 
