--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,7 +40,7 @@ h1, h2,h3{
     margin-top: 10px;
     backgroud-color: #252A34;
     padding-left: 10px;
-    color: #CBD0F7;
+    color: #252A34;
     border: none;
     height: 45px;
     outline: none;
