cor não é usuario

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,11 +61,11 @@ form [type="submit"]{
 }
 
 p{
-    color: #CBD0F7;
+    color: #1c1c1c;
     }
 
 a{
-    color: #5568fe
+    color: #5568fe;
 }
 /* Nav */
 
