--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,7 +73,7 @@ nav ul li a {
 
 #sobre{    
     padding: 10px 10px 20px 20px;
-    background-color: #172a38;
+    background-color:#e9e0d1;
     color: #FFFFFF;
 }
 
