--- a/src/css/css-popup.css
+++ b/src/css/css-popup.css
@@ -4,7 +4,7 @@
 
 button{
     margin: 10px auto;
-    background: crimson;
+    background: #33605a;
     color: wheat;
     border: 0;
     border-radius: 8px;
