--- a/src/css/css-popup.css
+++ b/src/css/css-popup.css
@@ -2,12 +2,11 @@
     box-sizing: border-box;
 }
 
-button{
+button{ /*botão login*/
     margin: 10px auto;
     background: #91a398; /*cor backgroud palavra login*/
     color: #000000; /*cor letra botão login */
-    border: 0;
-    border-radius: 8px;
+    border-radius: 8px; /*borda botão login*/
     cursor: pointer;
     padding: 6px 10px;
 }
@@ -20,8 +19,6 @@ button{
     left: 0;
     width: 100%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
 }
 
 .popup{
@@ -31,6 +28,7 @@ button{
     margin: 10% auto;
     padding: 30px;
     background: #33605a /*backgroud principal de trás*/;
+    border-radius: 8px;
     
 }
 
