--- a/src/css/paginausuario.css
+++ b/src/css/paginausuario.css
@@ -1,7 +1,14 @@
 body{
     font-family: 'Nunito', sans-serif;
 }
-
+.menuSuperior{
+    height:100%;
+    width: 300;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #33605a;
+}
 .menuOculto{
     height: 100%;
     width: 0;
