--- a/src/css/paginausuario.css
+++ b/src/css/paginausuario.css
@@ -166,10 +166,14 @@ body{
     font-weight: 600;
 }
 
-#principal .hero nav{
-    padding: 5px;
-    transition: margin-right 0.5s;
-    background: #91a398;
+.hero nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+.hero nav ul li a{
+    color: #fff;
+    text-decoration: none;
 }
 
 
