--- a/src/css/paginausuario.css
+++ b/src/css/paginausuario.css
@@ -67,7 +67,7 @@ body{
 #principal .hero{ /*todo o bloco menu superior*/
     width: 100%;
     min-height: 100vh ;
-    background: #91a398;
+    background: #fff;
     color: #888;
 }
 .hero nav{ /*bloco usuario*/
@@ -83,7 +83,7 @@ body{
     width: 40px;
     border-radius: 50%;
     cursor: pointer;
-    margin-left: 30px;
+    margin-left: 1300px;
 }
 
 .hero nav ul{
