--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,7 @@ nav ul li a {
     padding: 10px 0;
     width: 100%;
     text-decoration: none;
-    color: #000000;
+    color: #faf8f8;
 }
 
 /* servicos */ 
