--- a/src/css/style.css
+++ b/src/css/style.css
@@ -272,7 +272,7 @@ ul li ul:hover{
 .form input:hover{
     background-color: #b2b6b5;
     color: #e9e0d1;
-
+}
 
 @media screen and (min-width: 768px){
 
