cor letra input login

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,8 +108,8 @@ ul li ul:hover{
 }
 
 .bloco-login input:hover{
-    background-color: #b2b6b5;
-    color: #e9e0d1;
+    background-color: #fff;
+    color: black;
 }
 
 .empresa{
