--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,20 +6,23 @@ body{
 
 h1,h2,h3{
     font-family: Playfair Display, sans-serif;
-    color: #2d5751;
+    color: #e9e0d1;
+}
+
+a{
+    text-decoration: none;
+    color: #e9e0d1;
 }
 
 /* MENU PRINCIPAL EM DROPDOWN */
 .menu{
+    box-shadow: 1px 1px 6px #1c1c1c;
     display: flex;
     flex-direction: row;
     width: 100%;
     background: #2d5751;
     font-size: 24px;
-}
-
-.menu a{
-    text-decoration: none; 
+    font-weight: bolder;
 }
 
 .menu ul{    
@@ -36,9 +39,7 @@ h1,h2,h3{
     background: #2d5751;
 }
 
-.menu li a{
-    color: #fff;
-}
+
 
 .menu li:hover{
     background: rgb(0, 58, 39);
@@ -69,26 +70,20 @@ ul li ul:hover{
     width: 150%;
 }
 
-/* LOGIN */
-
-.login{
+.blocos{
+    box-shadow: 1px 1px 6px #1c1c1c;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
     height: 400px;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-.login h2{
-    color: #e9e0d1;
-}
 
-.login a{
-    text-decoration: none;
-    color: #e9e0d1;
-}
+/* LOGIN */
 
-.bloco-login{
+.bloco-login{ 
+    justify-content: space-evenly;
     width: 220px;
     padding: 0.8rem 1.2rem;
     border: none;
@@ -119,14 +114,19 @@ ul li ul:hover{
     background-color: #2d5751;
     color: #e9e0d1;
     font-size: 20px;
+    font-weight: bolder;
+    box-shadow: 1px 1px 6px #1c1c1c;
 }
 
 .vantagens{
+    padding: 15px;
     display: flex;
     align-items: center;
     flex-direction: row;
     color: #02382c;
     font-size: 20px;
+    font-weight: bolder;
+    box-shadow: 1px 1px 6px #1c1c1c;
 }
 
 /* CADASTRO */
@@ -136,15 +136,18 @@ ul li ul:hover{
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #2d5751;
+    justify-content: space-evenly;
+    background-color: #2d5751;    
+    box-shadow: 1px 1px 6px #1c1c1c;
 }
 
-#cadastro input{
+#cadastro input{    
     margin: 0.6rem 0;
     padding: 0.8rem 1.2rem;
     border: none;
     border-radius: 8px;
     box-shadow: 1px 1px 6px #1c1c1c;
+    background-color: #e9e0d1;
 }
 
 #cadastro input:hover{
@@ -154,21 +157,28 @@ ul li ul:hover{
 
 .img-cadastro{
     border-radius: 10px;
+    padding: 15px;
 }
 
 .dados-cadastro{
     display: flex;
-    flex-direction: column;
+    flex-direction: column;    
+}
+
+.gender{
+    color: #e9e0d1;
 }
 
 
 /* SOBRE */
 
 #sobre{
+    box-shadow: 1px 1px 6px #1c1c1c;
     padding: 10px 10px 20px 20px;
-    background-color: #e9e0d1;
-    color: #2d5751;
+    background-color: #2d5751;
+    color: #e9e0d1;
     font-size: 20px;
+    font-weight: bolder;
 }
 
 #sobre ul{
@@ -215,50 +225,36 @@ ul li ul:hover{
 
 /*Recuperação senha*/
 
-.voltar-button{ /*botão voltar*/
+.container{
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: center;    
 }
 
-.voltar-button button{ /*botão voltar*/
+.container h2{
+    font-family: Playfair Display, sans-serif;
+    color: #e9e0d1; 
+}
+
+.container form{
+    margin: 0.6rem 0;
+    width: 39%;
+    padding: 0.8rem 1.2rem;
     border: none;
-    background-color: #91a398;
+    border-radius: 8px;
+    box-shadow: 1px 1px 6px #1c1c1c;
+    background-color: #2d5751;
+}
+
+.form button{
+    border: none;
     padding: 0.4rem 1rem;
     border-radius: 5px;
     cursor: pointer;
 }
 
-.voltar-button button:hover{ /*quando passa o mouse por cima, fica outra cor*/
-    background-color: #33605a;
-}
-
-.voltar-button button a{ /*palavra enviar*/
-    text-decoration: none;
-    font-weight: 500;
-    color: #fff;
-}
-
-.enviar-button{ /*botão enviar*/
-    display: flex;
-    align-items: center;
-}
-
-.enviar-button button{ /*botão enviar*/
-    border: none;
-    background-color: #91a398;
-    padding: 0.4rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.enviar-button button:hover{ /*quando passa o mouse por cima, fica outra cor*/
-    background-color: #33605a;
-}
-
-.enviar-button button a{ /*palavra enviar*/
-    text-decoration: none;
-    font-weight: 500;
-    color: #fff;
+.form a{
+    color: #02382c;
 }
 
 .form input{
@@ -267,6 +263,7 @@ ul li ul:hover{
     border: none;
     border-radius: 8px;
     box-shadow: 1px 1px 6px #1c1c1c;
+    color: #02382c;
 }
 
 .form input:hover{
