--- a/src/css/style.css
+++ b/src/css/style.css
@@ -103,8 +103,8 @@ ul li ul:hover{
 }
 
 .bloco-login input:hover{
-    background-color: #fff;
-    color: black;
+    background-color: #b2b6b5;
+    color: #e9e0d1;
 }
 
 .empresa{
