--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,7 +104,7 @@ ul li ul:hover{
 
 .bloco-login input:hover{
     background-color: #b2b6b5;
-    color: #e9e0d1;
+    color: black;
 }
 
 .empresa{
@@ -290,3 +290,4 @@ ul li ul:hover{
         width: 100%;
     }
 }
+
